--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17144160">Uber Self-Driving Car That Struck Pedestrian Wasn’t Set to Stop in an Emergency</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.ntsb.gov/investigations/AccidentReports/Reports/HWY18MH010-prelim.pdf">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=jeffreyrogers">jeffreyrogers</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 14:18:04 &nbsp;•&nbsp;
-                                    464 comments &nbsp;•&nbsp;
-                                    429.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17178031">High school physics course notes, with JavaScript simulations</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -294,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Mtz1974">Mtz1974</a></strong> &nbsp;•&nbsp;
                                     2018-05-26 23:29:46 &nbsp;•&nbsp;
                                     95 comments &nbsp;•&nbsp;
-                                    395.0 points
+                                    396.0 points
                                 </span>
                             </td>
                         </tr>
@@ -374,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=chewxy">chewxy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 05:26:42 &nbsp;•&nbsp;
                                     112 comments &nbsp;•&nbsp;
-                                    378.0 points
+                                    379.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,14 +446,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17151046">There are real reasons for Linux to replace ifconfig, netstat, etc</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://utcc.utoronto.ca/~cks/space/blog/linux/ReplacingNetstatNotBad">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=zdw">zdw</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 06:11:32 &nbsp;•&nbsp;
-                                    255 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
+                                    346 comments &nbsp;•&nbsp;
                                     352.0 points
                                 </span>
                             </td>
@@ -486,15 +466,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178565">Facebook Tools Are Used to Screen Out Older Job Seekers, Lawsuit Claims</a>
+                                    <a href="https://news.ycombinator.com/item?id=17151046">There are real reasons for Linux to replace ifconfig, netstat, etc</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-29/facebook-tools-are-used-to-screen-out-older-job-seekers-lawsuit-claims">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:40:55 &nbsp;•&nbsp;
-                                    346 comments &nbsp;•&nbsp;
-                                    351.0 points
+                                    <a class="node" href="https://utcc.utoronto.ca/~cks/space/blog/linux/ReplacingNetstatNotBad">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=zdw">zdw</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 06:11:32 &nbsp;•&nbsp;
+                                    255 comments &nbsp;•&nbsp;
+                                    352.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,6 +506,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck (2006)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
+                                    163 comments &nbsp;•&nbsp;
+                                    344.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck (2006)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17152496">Google and Facebook accused of breaking GDPR laws</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
-                                    161 comments &nbsp;•&nbsp;
-                                    338.0 points
+                                    <a class="node" href="http://www.bbc.com/news/technology-44252327">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=nemoniac">nemoniac</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 11:27:50 &nbsp;•&nbsp;
+                                    369 comments &nbsp;•&nbsp;
+                                    328.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 15:10:03.463846</strong>
+            <strong>Last update at 2018-05-30 15:20:04.179191</strong>
         </div>
     </div>
 </div>
