--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -294,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 00:56:31 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    127.0 points
+                                    128.0 points
                                 </span>
                             </td>
                         </tr>
@@ -346,6 +346,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
+                                    43 comments &nbsp;•&nbsp;
+                                    118.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17171665">Unquantified</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -366,26 +386,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    43 comments &nbsp;•&nbsp;
-                                    117.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:31:12 &nbsp;•&nbsp;
                                     44 comments &nbsp;•&nbsp;
-                                    114.0 points
+                                    115.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 11:51:42 &nbsp;•&nbsp;
                                     12 comments &nbsp;•&nbsp;
-                                    112.0 points
+                                    113.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
+                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
+                                    9 comments &nbsp;•&nbsp;
                                     100.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 15:10:03.463846</strong>
+            <strong>Last update at 2018-05-30 15:20:04.179191</strong>
         </div>
     </div>
 </div>
