--- a/jobs/page1.html
+++ b/jobs/page1.html
@@ -144,6 +144,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17158599">Nurx Is Hiring a Lead Front-End Engineer</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="None">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=gangeska1984">gangeska1984</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 22:27:29 &nbsp;•&nbsp;
+                                    None comments &nbsp;•&nbsp;
+                                    1.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17156929">Mino Games Is Hiring Programmers in Montreal</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -379,7 +399,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 15:40:04.936256</strong>
+            <strong>Last update at 2018-05-30 15:50:04.694370</strong>
         </div>
     </div>
 </div>
