--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -86,7 +86,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183241">Deno, a secure TypeScript runtime using V8 and Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -98,7 +98,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183241">Deno, a secure TypeScript runtime using V8 and Go</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178302">JQBX – Social Listening Web/Mobile App</a>
                                 </span>
                             </td>
                         </tr>
@@ -206,15 +206,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177241">Microsoft .Net Core telemetry is not opt-in</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184023">A Universal Law of Procrastination (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 08:04:50 &nbsp;•&nbsp;
-                                    114 comments &nbsp;•&nbsp;
-                                    137.0 points
+                                    <a class="node" href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3064">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 00:47:59 &nbsp;•&nbsp;
+                                    29 comments &nbsp;•&nbsp;
+                                    138.0 points
                                 </span>
                             </td>
                         </tr>
@@ -226,15 +226,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184023">A Universal Law of Procrastination (2016)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177241">Microsoft .Net Core telemetry is not opt-in</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://physicstoday.scitation.org/doi/10.1063/PT.3.3064">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 00:47:59 &nbsp;•&nbsp;
-                                    28 comments &nbsp;•&nbsp;
-                                    133.0 points
+                                    <a class="node" href="https://github.com/dotnet/cli/issues/3093#issuecomment-392663561">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=setquk">setquk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 08:04:50 &nbsp;•&nbsp;
+                                    114 comments &nbsp;•&nbsp;
+                                    137.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,8 +333,8 @@
                                     <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    44 comments &nbsp;•&nbsp;
-                                    122.0 points
+                                    46 comments &nbsp;•&nbsp;
+                                    123.0 points
                                 </span>
                             </td>
                         </tr>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:31:12 &nbsp;•&nbsp;
                                     48 comments &nbsp;•&nbsp;
-                                    118.0 points
+                                    119.0 points
                                 </span>
                             </td>
                         </tr>
@@ -446,6 +446,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
+                                    11 comments &nbsp;•&nbsp;
+                                    109.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17173593">Anatomy of an online misinformation network</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -466,14 +486,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181570">Our machine learning and NLP journey</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
-                                    11 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:06:07 &nbsp;•&nbsp;
+                                    24 comments &nbsp;•&nbsp;
                                     107.0 points
                                 </span>
                             </td>
@@ -486,15 +506,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181570">Our machine learning and NLP journey</a>
+                                    <a href="https://news.ycombinator.com/item?id=17188038">'Murdered' Journalist Is Alive and Well</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.wootric.com/blog/our-machine-learning-journey-from-zero-to-customer-value-in-12-months/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=prabhatjha">prabhatjha</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 18:06:07 &nbsp;•&nbsp;
-                                    24 comments &nbsp;•&nbsp;
-                                    107.0 points
+                                    <a class="node" href="https://www.bbc.co.uk/news/world-europe-44307611">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=smarri">smarri</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 14:44:50 &nbsp;•&nbsp;
+                                    43 comments &nbsp;•&nbsp;
+                                    106.0 points
                                 </span>
                             </td>
                         </tr>
@@ -535,26 +555,6 @@
                                     2018-05-28 13:37:26 &nbsp;•&nbsp;
                                     21 comments &nbsp;•&nbsp;
                                     104.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
-                                    100.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 16:00:03.975984</strong>
+            <strong>Last update at 2018-05-30 16:10:04.495458</strong>
         </div>
     </div>
 </div>
