--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
-                                    137 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -394,7 +394,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 23:59:50 &nbsp;•&nbsp;
                                     8 comments &nbsp;•&nbsp;
-                                    198.0 points
+                                    199.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 16:20:04.419534</strong>
+            <strong>Last update at 2018-05-30 16:30:03.466804</strong>
         </div>
     </div>
 </div>
