--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -214,7 +214,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 10:49:10 &nbsp;•&nbsp;
                                     29 comments &nbsp;•&nbsp;
-                                    245.0 points
+                                    249.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,15 +306,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers</a>
+                                    <a href="https://news.ycombinator.com/item?id=17186591">Scrum disempowers developers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
                                     <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 10:53:13 &nbsp;•&nbsp;
-                                    235 comments &nbsp;•&nbsp;
-                                    218.0 points
+                                    242 comments &nbsp;•&nbsp;
+                                    226.0 points
                                 </span>
                             </td>
                         </tr>
@@ -334,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 12:12:10 &nbsp;•&nbsp;
                                     137 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 23:59:50 &nbsp;•&nbsp;
                                     8 comments &nbsp;•&nbsp;
-                                    198.0 points
+                                    199.0 points
                                 </span>
                             </td>
                         </tr>
@@ -473,8 +473,8 @@
                                     <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 06:38:38 &nbsp;•&nbsp;
-                                    176 comments &nbsp;•&nbsp;
-                                    185.0 points
+                                    181 comments &nbsp;•&nbsp;
+                                    187.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 16:20:04.419534</strong>
+            <strong>Last update at 2018-05-30 16:30:03.466804</strong>
         </div>
     </div>
 </div>
