--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -206,15 +206,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
-                                    59 comments &nbsp;•&nbsp;
-                                    248.0 points
+                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
+                                    29 comments &nbsp;•&nbsp;
+                                    249.0 points
                                 </span>
                             </td>
                         </tr>
@@ -226,15 +226,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
+                                    <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
-                                    29 comments &nbsp;•&nbsp;
-                                    245.0 points
+                                    <a class="node" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5853825/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lainon">lainon</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 14:47:36 &nbsp;•&nbsp;
+                                    59 comments &nbsp;•&nbsp;
+                                    248.0 points
                                 </span>
                             </td>
                         </tr>
@@ -446,6 +446,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17186591">Scrum disempowers developers</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
+                                    242 comments &nbsp;•&nbsp;
+                                    226.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17139881">Google Home Beats Amazon Echo in Q1 2018 Smart Speaker Shipments</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,34 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers</a>
+                                    <a href="https://news.ycombinator.com/item?id=17178365">WhoisGuard Privacy Protection is now free</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
-                                    235 comments &nbsp;•&nbsp;
-                                    218.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
-                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
-                                    66 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.namecheap.com/security/whoisguard.aspx">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=djug">djug</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 12:12:10 &nbsp;•&nbsp;
+                                    137 comments &nbsp;•&nbsp;
                                     218.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 16:20:04.419534</strong>
+            <strong>Last update at 2018-05-30 16:30:03.466804</strong>
         </div>
     </div>
 </div>
