--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -173,7 +173,7 @@
                                     <a class="node" href="http://www.imperialclub.com/Articles/58AutoPilot/index.htm">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=userbinator">userbinator</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 02:31:59 &nbsp;•&nbsp;
-                                    67 comments &nbsp;•&nbsp;
+                                    69 comments &nbsp;•&nbsp;
                                     109.0 points
                                 </span>
                             </td>
@@ -286,15 +286,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189254">How to Avoid Distractions and Start the Right Company</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
-                                    100.0 points
+                                    <a class="node" href="https://www.atrium.co/blog/sam-altman-start-the-right-company/?hn">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 16:46:56 &nbsp;•&nbsp;
+                                    35 comments &nbsp;•&nbsp;
+                                    102.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,15 +306,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189254">Sam Altman: How to Avoid Distractions and Start the Right Company</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.atrium.co/blog/sam-altman-start-the-right-company/?hn">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 16:46:56 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
-                                    96.0 points
+                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
+                                    33 comments &nbsp;•&nbsp;
+                                    100.0 points
                                 </span>
                             </td>
                         </tr>
@@ -393,8 +393,8 @@
                                     <a class="node" href="http://ftp.cs.ucla.edu/pub/stat_ser/r481.pdf">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=diego898">diego898</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 13:00:08 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
-                                    91.0 points
+                                    6 comments &nbsp;•&nbsp;
+                                    93.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 18:30:04.691652</strong>
+            <strong>Last update at 2018-05-30 18:40:03.847722</strong>
         </div>
     </div>
 </div>
