--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165866">Zero-Overhead Tree Processing with the Visitor Pattern</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190326">Intel Announces Optane DIMMs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 07:07:37 &nbsp;•&nbsp;
-                                    80 comments &nbsp;•&nbsp;
-                                    214.0 points
+                                    <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 18:37:35 &nbsp;•&nbsp;
+                                    105 comments &nbsp;•&nbsp;
+                                    215.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 23:20:03.250416</strong>
+            <strong>Last update at 2018-05-30 23:30:03.343404</strong>
         </div>
     </div>
 </div>
