--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190705">Actix: a small, pragmatic, and fast Rust web framework</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://actix.rs/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:01 &nbsp;•&nbsp;
-                                    48 comments &nbsp;•&nbsp;
-                                    183.0 points
+                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
+                                    98 comments &nbsp;•&nbsp;
+                                    185.0 points
                                 </span>
                             </td>
                         </tr>
@@ -366,14 +366,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181130">People using Venmo to spy on cheating spouses</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187436">Odyssey – Scalable PostgreSQL connection pooler</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.marketwatch.com/story/venmo-stalkers-or-amateur-sleuths-they-out-cheating-boyfriends-spy-on-exes-and-see-who-buys-drugs-2018-05-11">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 17:20:30 &nbsp;•&nbsp;
-                                    198 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/yandex/odyssey">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:25:10 &nbsp;•&nbsp;
+                                    34 comments &nbsp;•&nbsp;
                                     168.0 points
                                 </span>
                             </td>
@@ -386,15 +386,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187436">Odyssey – Scalable PostgreSQL connection pooler</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181130">People using Venmo to spy on cheating spouses</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/yandex/odyssey">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:25:10 &nbsp;•&nbsp;
-                                    34 comments &nbsp;•&nbsp;
-                                    166.0 points
+                                    <a class="node" href="https://www.marketwatch.com/story/venmo-stalkers-or-amateur-sleuths-they-out-cheating-boyfriends-spy-on-exes-and-see-who-buys-drugs-2018-05-11">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=maxshmax">maxshmax</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 17:20:30 &nbsp;•&nbsp;
+                                    198 comments &nbsp;•&nbsp;
+                                    168.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 23:20:03.250416</strong>
+            <strong>Last update at 2018-05-30 23:30:03.343404</strong>
         </div>
     </div>
 </div>
