--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    98 comments &nbsp;•&nbsp;
-                                    185.0 points
+                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
+                                    86 comments &nbsp;•&nbsp;
+                                    188.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 23:30:03.343404</strong>
+            <strong>Last update at 2018-05-30 23:40:05.010422</strong>
         </div>
     </div>
 </div>
