--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -173,7 +173,7 @@
                                     <a class="node" href="https://jacquesmattheij.com/so-your-start-up-receive-the-nightmare-gdpr-letter">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 10:06:53 &nbsp;•&nbsp;
-                                    490 comments &nbsp;•&nbsp;
+                                    491 comments &nbsp;•&nbsp;
                                     273.0 points
                                 </span>
                             </td>
@@ -354,7 +354,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:42:23 &nbsp;•&nbsp;
                                     21 comments &nbsp;•&nbsp;
-                                    217.0 points
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,8 +373,28 @@
                                     <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 18:37:35 &nbsp;•&nbsp;
-                                    105 comments &nbsp;•&nbsp;
+                                    107 comments &nbsp;•&nbsp;
                                     215.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17185569">Lobotomizing Gnome</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 06:38:38 &nbsp;•&nbsp;
+                                    206 comments &nbsp;•&nbsp;
+                                    213.0 points
                                 </span>
                             </td>
                         </tr>
@@ -395,26 +415,6 @@
                                     2018-05-28 04:29:07 &nbsp;•&nbsp;
                                     91 comments &nbsp;•&nbsp;
                                     213.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185569">Lobotomizing Gnome</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 06:38:38 &nbsp;•&nbsp;
-                                    206 comments &nbsp;•&nbsp;
-                                    212.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,7 +474,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=benaadams">benaadams</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 17:33:43 &nbsp;•&nbsp;
                                     77 comments &nbsp;•&nbsp;
-                                    200.0 points
+                                    202.0 points
                                 </span>
                             </td>
                         </tr>
@@ -494,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
                                     55 comments &nbsp;•&nbsp;
-                                    189.0 points
+                                    190.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190705">Actix: a small, pragmatic, and fast Rust web framework</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    86 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://actix.rs/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:10:01 &nbsp;•&nbsp;
+                                    51 comments &nbsp;•&nbsp;
                                     188.0 points
                                 </span>
                             </td>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190705">Actix: a small, pragmatic, and fast Rust web framework</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://actix.rs/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:01 &nbsp;•&nbsp;
-                                    48 comments &nbsp;•&nbsp;
-                                    187.0 points
+                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
+                                    100 comments &nbsp;•&nbsp;
+                                    188.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 23:30:03.343404</strong>
+            <strong>Last update at 2018-05-30 23:40:05.010422</strong>
         </div>
     </div>
 </div>
