--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171665">Unquantified</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
-                                    118.0 points
+                                    <a class="node" href="https://nomasters.io/posts/unquantified/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 10:31:44 &nbsp;•&nbsp;
+                                    64 comments &nbsp;•&nbsp;
+                                    119.0 points
                                 </span>
                             </td>
                         </tr>
@@ -446,15 +446,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17176752">NetBSD: a new version of the CDDL dtrace and ZFS code</a>
+                                    <a href="https://news.ycombinator.com/item?id=17189406">Mary Meeker Internet Trends Report 2018</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/NetBSD/src/commit/bae129c5e36fe3b2ded1e036fc2f6f12430f55e0">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 05:38:51 &nbsp;•&nbsp;
-                                    5 comments &nbsp;•&nbsp;
-                                    92.0 points
+                                    <a class="node" href="https://www.slideshare.net/kleinerperkins/internet-trends-report-2018-99574140">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kbal11">kbal11</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 17:01:40 &nbsp;•&nbsp;
+                                    38 comments &nbsp;•&nbsp;
+                                    95.0 points
                                 </span>
                             </td>
                         </tr>
@@ -474,7 +474,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=njn">njn</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:35:36 &nbsp;•&nbsp;
                                     91 comments &nbsp;•&nbsp;
-                                    91.0 points
+                                    92.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,15 +486,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189406">Mary Meeker Internet Trends Report 2018</a>
+                                    <a href="https://news.ycombinator.com/item?id=17176752">NetBSD: a new version of the CDDL dtrace and ZFS code</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.slideshare.net/kleinerperkins/internet-trends-report-2018-99574140">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kbal11">kbal11</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:01:40 &nbsp;•&nbsp;
-                                    38 comments &nbsp;•&nbsp;
-                                    91.0 points
+                                    <a class="node" href="https://github.com/NetBSD/src/commit/bae129c5e36fe3b2ded1e036fc2f6f12430f55e0">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=algorithm314">algorithm314</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 05:38:51 &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
+                                    92.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 23:30:03.343404</strong>
+            <strong>Last update at 2018-05-30 23:40:05.010422</strong>
         </div>
     </div>
 </div>
