--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -326,14 +326,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:54:28 &nbsp;•&nbsp;
-                                    208 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
+                                    109 comments &nbsp;•&nbsp;
                                     204.0 points
                                 </span>
                             </td>
@@ -346,15 +346,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175479">Will Kubernetes Collapse Under the Weight of Its Complexity?</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    109 comments &nbsp;•&nbsp;
-                                    203.0 points
+                                    <a class="node" href="https://www.influxdata.com/blog/will-kubernetes-collapse-under-the-weight-of-its-complexity/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tim_sw">tim_sw</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 23:54:28 &nbsp;•&nbsp;
+                                    208 comments &nbsp;•&nbsp;
+                                    204.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17169080">Top Mistakes and Learnings from My Startup: Postmortem Samsamia</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://miguelgfierro.com/blog/2018/top-mistakes-and-learnings-from-my-startup-postmortem-samsamia/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=hoaphumanoid">hoaphumanoid</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 21:00:55 &nbsp;•&nbsp;
-                                    71 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
+                                    28 comments &nbsp;•&nbsp;
                                     184.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 01:40:04.220575</strong>
+            <strong>Last update at 2018-05-31 01:50:03.511941</strong>
         </div>
     </div>
 </div>
