--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -193,8 +193,8 @@
                                     <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    27 comments &nbsp;•&nbsp;
-                                    182.0 points
+                                    28 comments &nbsp;•&nbsp;
+                                    184.0 points
                                 </span>
                             </td>
                         </tr>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 13:25:10 &nbsp;•&nbsp;
                                     34 comments &nbsp;•&nbsp;
-                                    174.0 points
+                                    175.0 points
                                 </span>
                             </td>
                         </tr>
@@ -466,6 +466,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17186865">What I’ve Been Doing Since Quitting My Job</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://mtlynch.io/since-quitting/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 11:42:29 &nbsp;•&nbsp;
+                                    91 comments &nbsp;•&nbsp;
+                                    160.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17181370">Lawyers Send Mobile Ads To Phones In ER Waiting Rooms</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,34 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186865">What I’ve Been Doing Since Quitting My Job</a>
+                                    <a href="https://news.ycombinator.com/item?id=17188232">How to Sell – a guide for SaaS startups</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://mtlynch.io/since-quitting/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=TonnyGaric">TonnyGaric</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 11:42:29 &nbsp;•&nbsp;
-                                    90 comments &nbsp;•&nbsp;
-                                    158.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183101">The vgo proposal is accepted. Now what?</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://research.swtch.com/vgo-accepted">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 21:37:21 &nbsp;•&nbsp;
-                                    129 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.entrepidpartners.com/how-to-sell-guide">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 15:04:45 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
                                     157.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 01:40:04.220575</strong>
+            <strong>Last update at 2018-05-31 01:50:03.511941</strong>
         </div>
     </div>
 </div>
