--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://github.com/npm/npm/issues/20791">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=spondyl">spondyl</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 02:10:43 &nbsp;•&nbsp;
-                                    249 comments &nbsp;•&nbsp;
+                                    250 comments &nbsp;•&nbsp;
                                     294.0 points
                                 </span>
                             </td>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17157540">Mussels test positive for opioids in Seattle's Puget Sound</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190326">Intel Announces Optane DIMMs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bbc.com/news/amp/world-us-canada-44256765">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
-                                    2018-05-25 20:19:19 &nbsp;•&nbsp;
-                                    124 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 18:37:35 &nbsp;•&nbsp;
+                                    122 comments &nbsp;•&nbsp;
                                     254.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 01:50:03.511941</strong>
+            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
         </div>
     </div>
 </div>
