--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190326">Intel Announces Optane DIMMs</a>
+                                    <a href="https://news.ycombinator.com/item?id=17157540">Mussels test positive for opioids in Seattle's Puget Sound</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 18:37:35 &nbsp;•&nbsp;
-                                    122 comments &nbsp;•&nbsp;
-                                    252.0 points
+                                    <a class="node" href="https://www.bbc.com/news/amp/world-us-canada-44256765">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lunchbreak">lunchbreak</a></strong> &nbsp;•&nbsp;
+                                    2018-05-25 20:19:19 &nbsp;•&nbsp;
+                                    124 comments &nbsp;•&nbsp;
+                                    254.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,7 @@
                                     <a class="node" href="https://lists.gnu.org/archive/html/emacs-devel/2018-05/msg00765.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:19:04 &nbsp;•&nbsp;
-                                    97 comments &nbsp;•&nbsp;
+                                    98 comments &nbsp;•&nbsp;
                                     230.0 points
                                 </span>
                             </td>
@@ -433,8 +433,8 @@
                                     <a class="node" href="https://actix.rs/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:10:01 &nbsp;•&nbsp;
-                                    54 comments &nbsp;•&nbsp;
-                                    222.0 points
+                                    55 comments &nbsp;•&nbsp;
+                                    226.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 01:50:03.511941</strong>
+            <strong>Last update at 2018-05-31 02:00:03.479055</strong>
         </div>
     </div>
 </div>
